--- a/.github/workflows/sbom.yaml
+++ b/.github/workflows/sbom.yaml
@@ -8,3 +8,6 @@ on:
 jobs:
   call-software-dependency-workflow:
     uses: DPaaS-organization/DPaaS-Admin-Repo/.github/workflows/sbom.yaml@main
+    permissions: # Required if the admin repo is private
+      id-token: write
+      contents: read
