--- a/.github/workflows/dependencies-workflow.yaml
+++ b/.github/workflows/dependencies-workflow.yaml
@@ -11,3 +11,6 @@ jobs:
     permissions: # Required if the admin repo is private
       contents: read
       id-token: write
+    with:
+      secrets.DEPENDENCY_TRACK_API_KEY: ${{ secrets.DEPENDENCY_TRACK_API_KEY }}
+      secrets.ADMIN_ACCESS_TOKEN: ${{ secrets.ADMIN_ACCESS_TOKEN }}
