--- a/.github/workflows/dependencies-workflow.yaml
+++ b/.github/workflows/dependencies-workflow.yaml
@@ -1,16 +1,15 @@
-name: Call Software Dependency Workflow
+name: Call Dependency Workflow
 
 on:
-  push: 
+  push:
     branches:
       - main
 
 jobs:
-  call-software-dependency-workflow:
+  call-dependency-workflow:
     uses: DPaaS-organization/DPaaS-Admin-Repo/.github/workflows/dependency-workflow.yaml@main
-    permissions: # Required if the admin repo is private
+    permissions:
       contents: read
-      id-token: write
     with:
       DEPENDENCY_TRACK_API_KEY: ${{ secrets.DEPENDENCY_TRACK_API_KEY }}
       ADMIN_ACCESS_TOKEN: ${{ secrets.ADMIN_ACCESS_TOKEN }}
