--- a/.github/workflows/dependencies-workflow.yaml
+++ b/.github/workflows/dependencies-workflow.yaml
@@ -10,6 +10,6 @@ jobs:
     uses: DPaaS-organization/DPaaS-Admin-Repo/.github/workflows/dependency-workflow.yaml@main
     permissions:
       contents: read
-    with:
+    secrets:
       DEPENDENCY_TRACK_API_KEY: ${{ secrets.DEPENDENCY_TRACK_API_KEY }}
       ADMIN_ACCESS_TOKEN: ${{ secrets.ADMIN_ACCESS_TOKEN }}
