--- a/.github/workflows/secure-pipeline.yaml
+++ b/.github/workflows/secure-pipeline.yaml
@@ -17,3 +17,7 @@ jobs:
       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
       DTRACK_PROJECT_KEY: ${{ secrets.DTRACK_PROJECT_KEY }}
+      PRODUCTION_HOST_URL: ${{ secrets.PRODUCTION_HOST_URL }}
+      DB_USER: ${{ secrets.DB_USER }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      DB_HOST_URL: ${{ secrets.DB_HOST_URL }}
