--- a/.github/workflows/secure-pipeline.yaml
+++ b/.github/workflows/secure-pipeline.yaml
@@ -9,14 +9,14 @@ on:
       - main
 
 jobs:
-  secure-build:
-    uses: DPaaS-organization/DPaaS-Admin-Repo/.github/workflows/secure-build.yaml@main
-    secrets:
-      DTRACK_API_KEY: ${{ secrets.DEPENDENCY_TRACK_API_KEY }}
-      ADMIN_ACCESS_TOKEN: ${{ secrets.ADMIN_ACCESS_TOKEN }}
-      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
-      DTRACK_PROJECT_KEY: ${{ secrets.DTRACK_PROJECT_KEY }}
+  # secure-build:
+  #   uses: DPaaS-organization/DPaaS-Admin-Repo/.github/workflows/secure-build.yaml@main
+  #   secrets:
+  #     DTRACK_API_KEY: ${{ secrets.DEPENDENCY_TRACK_API_KEY }}
+  #     ADMIN_ACCESS_TOKEN: ${{ secrets.ADMIN_ACCESS_TOKEN }}
+  #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+  #     SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
+  #     DTRACK_PROJECT_KEY: ${{ secrets.DTRACK_PROJECT_KEY }}
   secure-deployment:
     uses: DPaaS-organization/DPaaS-Admin-Repo/.github/workflows/secure-deployment.yaml@main
     secrets:
