--- a/.github/workflows/secure-pipeline.yaml
+++ b/.github/workflows/secure-pipeline.yaml
@@ -19,6 +19,7 @@ jobs:
       DTRACK_PROJECT_KEY: ${{ secrets.DTRACK_PROJECT_KEY }}
   secure-deployment:
     uses: DPaaS-organization/DPaaS-Admin-Repo/.github/workflows/secure-deployment.yaml@main
+    needs: secure-build
     secrets:
       PRODUCTION_HOST_URL: ${{ secrets.PRODUCTION_HOST_URL }}
       DB_USER: ${{ secrets.DB_USER }}
