--- a/.github/workflows/secure-pipeline.yaml
+++ b/.github/workflows/secure-pipeline.yaml
@@ -17,12 +17,12 @@ jobs:
       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
       DTRACK_PROJECT_KEY: ${{ secrets.DTRACK_PROJECT_KEY }}
-    inputs:
-      dockerImageName: "JuiceShop"
       
   secure-deployment:
     uses: DPaaS-organization/DPaaS-Admin-Repo/.github/workflows/secure-deployment.yaml@main
     needs: secure-build
+    with:
+      dockerImageName: ${{ variables.dockerImageName }}
     secrets:
       PRODUCTION_HOST_URL: ${{ secrets.PRODUCTION_HOST_URL }}
       DB_USER: ${{ secrets.DB_USER }}
