--- a/.github/workflows/new-threats.yaml
+++ b/.github/workflows/new-threats.yaml
@@ -23,3 +23,5 @@ jobs:
       cveNumber: ${{ inputs.cveNumber }}
       vulnerablePackage: ${{ inputs.vulnerablePackage }}
       packageVersions: ${{ inputs.packageVersions }}
+    secrets:
+      DTRACK_PROJECT_KEY: ${{ secrets.DTRACK_PROJECT_KEY }}
