--- a/.github/workflows/new-threats.yaml
+++ b/.github/workflows/new-threats.yaml
@@ -26,3 +26,5 @@ jobs:
     secrets:
       DTRACK_PROJECT_KEY: ${{ secrets.DTRACK_PROJECT_KEY }}
       DTRACK_API_KEY: ${{ secrets.DTRACK_API_KEY }}
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
